--- a/packages/bootstrap/scss/pdf-viewer/_index.scss
+++ b/packages/bootstrap/scss/pdf-viewer/_index.scss
@@ -3,11 +3,14 @@
 
 // Dependencies
 @import "../common/_index.scss";
+@import "../button/_variables.scss";
 @import "../combobox/_index.scss";
 @import "../toolbar/_index.scss";
 @import "../dialog/_index.scss";
 @import "../pager/_index.scss";
 @import "../icons/_index.scss";
+@import "../dropzone/_index.scss";
+@import "../window/_index.scss";
 
 
 // Component
