--- a/packages/bootstrap/scss/pdf-viewer/_variables.scss
+++ b/packages/bootstrap/scss/pdf-viewer/_variables.scss
@@ -24,9 +24,22 @@ $pdf-viewer-page-text: $component-text !default;
 $pdf-viewer-page-border: $component-border !default;
 $pdf-viewer-page-shadow: 0 0 ($pdf-viewer-page-spacing / 2) $pdf-viewer-page-border !default;
 
-$pdf-viewer-search-dialog-padding: $toolbar-padding-x !default;
+$pdf-viewer-search-dialog-padding-x: $toolbar-padding-x !default;
+$pdf-viewer-search-dialog-padding-y: calc( #{$toolbar-padding-x} * 2 ) !default;
 $pdf-viewer-search-dialog-spacing: $toolbar-spacing !default;
+
+$pdf-viewer-search-panel-border-width: 1px !default;
+$pdf-viewer-search-panel-border-radius: map-get( $spacing, 1 ) !default;
+$pdf-viewer-search-panel-bg: $component-bg !default;
+$pdf-viewer-search-panel-text: $component-text !default;
+$pdf-viewer-search-panel-border: $component-border !default;
+$pdf-viewer-search-panel-shadow: null !default;
+$pdf-viewer-search-panel-matches-spacing: $padding-x-sm !default;
 
 $pdf-viewer-selection-line-height: 1.2 !default;
 
 $pdf-viewer-search-highlight-bg: $body-text !default;
+$pdf-viewer-search-highlight-mark-bg: yellow !default;
+
+$pdf-viewer-icon-text: $dropzone-icon-text !default;
+$pdf-viewer-icon-size: calc( #{$icon-size} * 3 ) !default;
