chore(appbar): appbar fixes in fluent

--- a/packages/fluent/scss/appbar/_layout.scss
+++ b/packages/fluent/scss/appbar/_layout.scss
@@ -48,7 +48,8 @@
             flex: 1 0 auto;
         }
 
-        .k-spacer-sized {
+
+        .k-appbar-spacer-sized {
             flex-grow: 0;
         }
 
